# assistant-frontend

./: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  config.py
app/routes/: chat.py
app/utilities/: say.py
