[project]
name = "assistant-frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-htmx>=0.4.0",
    "pyttsx3>=2.99",
    "requests>=2.34.2",
    "strip-markdown>=1.3",
    "uuid>=1.30",
]
